FDN-1807: Upgrade to java 17